# readme-ai-gen

./: .env.example  .gitignore  LICENSE  README.md  app.js  index.html  pyproject.toml  requirements.txt  styles.css
api/: generate.py
readme_ai_gen/: __init__.py  builder.py  cli.py  config.py  fallback.py  fetcher.py  generator.py  renderer.py  utils.py
tests/: test_builder.py  test_fetcher.py  test_generator.py
